# quiznote

./: .gitignore  README.md  pyproject.toml  requirements.txt
notedrill/: __init__.py  app.py  cli.py  config.py  generator.py  grader.py  models.py  parser.py  quiz.py  srs.py  storage.py
notedrill/routes/: __init__.py  deepdive.py  generate.py  present.py  questions.py  quiz_legacy.py  review.py  vault.py
notedrill/static/: style.css
notedrill/templates/: base.html  dashboard.html  deepdive.html  deepdive_result.html  error.html  generate.html  index.html  loading.html  notes.html  present.html  present_result.html  question_edit.html  quiz.html  quiz_start.html  result.html  review_card.html  review_done.html  stats.html  vault.html
quiznote/: __init__.py  app.py  cli.py  config.py  grader.py  srs.py  storage.py
quiznote/templates/: base.html  dashboard.html  deepdive.html  deepdive_result.html  error.html  loading.html  review_card.html  stats.html  vault.html
tests/: __init__.py  test_models.py  test_parser.py  test_srs.py
